# list-symbols

./: .gitignore  CMakeLists.txt  compile_flags.txt  lint_rts_symbols.py
.github/workflows/: ci.yml
src/: main.c
